@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <!--<TargetFrameworks>net35;net40;net45;netcoreapp2.0;netcoreapp3.0;netstandard2.0;netstandard2.1;net5.0</TargetFrameworks>-->
-    <TargetFrameworks>net6.0</TargetFrameworks>
+    <TargetFrameworks>netcoreapp2.1</TargetFrameworks>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <DisableImplicitNamespaceImports>true</DisableImplicitNamespaceImports>
     <RootNamespace>KGySoft</RootNamespace>
@@ -18,7 +18,7 @@
     <Authors>György Kőszeg</Authors>
     <Nullable>enable</Nullable>
 
-    <!--Suppression NETSDK1138: The target framework 'netcoreapp2.0'/'netcoreapp3.0' is out of support - this is not an application but a library so targeting the lowest possible versions is intended -->
+    <!--Suppression NETSDK1138: The target framework 'netcoreapp2.0'/'netcoreapp2.1'/'netcoreapp3.0' is out of support - this is not an application but a library so targeting the lowest possible versions is intended -->
     <NoWarn>$(NoWarn);NETSDK1138</NoWarn>
   </PropertyGroup>
 
@@ -54,8 +54,8 @@
     <PackageReference Include="System.Windows.Extensions" Version="6.0.0" />
   </ItemGroup>
 
-  <!-- Legacy .NET Core references (it cannot be upgraded, see https://github.com/dotnet/runtime/issues/59032) -->
-  <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp2.0' OR '$(TargetFramework)' == 'netcoreapp3.0'">
+  <!-- Legacy .NET Core references (they cannot be upgraded, see https://github.com/dotnet/runtime/issues/59032) -->
+  <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp2.0' OR '$(TargetFramework)' == 'netcoreapp2.1' OR '$(TargetFramework)' == 'netcoreapp3.0'">
     <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
     <!--Required for non-string resources-->
     <PackageReference Include="System.Resources.Extensions" Version="5.0.0" />
